--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-size: 1.3em;
         }
     </style>
+    <script src="node_modules/angular/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
