--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             Your name: <input type="text" id="name">
         </div>
-        <div>Total Numeric value of person's name is: </div>
+        <div>Total Numeric value of person's name is: {{totalValue}}</div>
     </div>
 </body>
 </html>
