--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <h1>Name Calculator</h1>
     <div ng-controller="NameCalculatorController">
         <div>
-            Your name: <input type="text" ng-model="name">
+            Your name: <input type="text" ng-model="name" ng-keyup="displayNumeric();">
         </div>
-        <div>Total Numeric value of person's name is: {{totalValue}} {{name}} </div>
+        <div>Total Numeric value of person's name is: {{totalValue}} </div>
     </div>
 </body>
 </html>
